L2J Server BETA: Minor Cleanup